Update author attribution in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         />
         <h1 class="libre-baskerville">Believe In Yourself</h1>
         <p class="libre-baskerville">You are capable of amazing things.</p>
-        <h3>Created by: Odunze Chidubem</h3>
+        <h3>By: Odunze Chidubem</h3>
       </div>
     </div>
   </body>
